...
    <string name="close">Close</string>
    <string name="minutes_short">min.</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="saving">Saving. Please wait&#8230;</string>
    <string name="deleting">Deleting. Please wait&#8230;</string>
    <string name="delete_confirm">Really delete?</string>
    <string name="set_timer">Set Timer</string>
    <string name="reload">Reload</string>
    <string name="recheck">Recheck</string>

    <string-array name="weekdays_short">
        <item>Mo</item>
        <item>Tu</item>
...
    <string name="remote_widget_config_title_style">Select the style of the remote control</string>
    <string name="remote_widget_config_title_profile">Select the profile to use with the widget</string>
    <string name="standard">Standard Layout (Full)</string>
    <string name="quickzap">QuickZap Layout (Simple)</string>
    <string name="no_epg_available">Currently there is no EPG-Information available for this channel!</string>
    <string name="movie_detail_pane_empty">Choose Info on a recording to see its details here</string>
    <string name="epg_detail_pane_empty">Choose an event to see its details here</string>
    <string name="ok">OK</string>
    <string name="activate">Activate</string>
    <string name="confirm_delete_profile">Do you really want to delete this profile?</string>
    <string name="profile_activated">Activated profile</string>
    <string name="profile_not_activated">Error activating profile</string>
    <string name="profile_deleted">Deleted profile</string>
...
    <string name="loading">Loading&#8230;</string>
    <string name="about">About</string>
    <string name="changelog">Changelog</string>
    <string name="license_gplv3">LICENSE:\nDreamDroid is free Software!\nLicensed under the GNU General Public License 3 https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="source_code_link">Source code available at: http://github.com/sreichholf/dreamDroid</string>
    <string name="connection">Connection</string>
    <string name="not_available">Not available</string>
    <string name="checking">checking&#8230;</string>
    <string name="checking_connection">Checking connection&#8230;</string>
    <string name="session_online">Online</string>
    <string name="session_offline">Offline</string>
    <string name="session_checking">Checking</string>
    <string name="session_needs_receiver">Needs the receiver</string>
    <string name="session_needs_receiver_long">Connect to the receiver to use this.</string>
    <string name="error">ERROR!</string>
    <string name="version_too_low">Version &lt; 1.6.5</string>
    <string name="connection_error">Connection error</string>
    <string name="port_out_of_range">Port not between 1 and 65535</string>
    <string name="illegal_host">Illegal host</string>
    <string name="edit_timer">Edit Timer</string>
    <string name="cleaning_timerlist">Cleaning up timerlist</string>
    <string name="cleanup">Cleanup</string>
    <string name="in_standby">Device is now in Standby-Mode</string>
    <string name="is_running">Device is now running</string>
    <string name="stream">Stream</string>
    <string name="stream_host_long">Host/IP for streaming (optional)</string>
    <string name="stream_current">Stream current</string>
    <string name="similar">Similar</string>

    <string-array name="timer_state">
        <item>waiting&#8230;</item>
        <item>prepared&#8230;</item>
        <item>running&#8230;</item>
        <item>ended</item>
...
    <string name="show_now_playing_strip">Now-playing strip</string>
    <string name="show_now_playing_strip_long">Show what\'s currently on the box on TV &amp; Movies</string>
    <string name="simple_remote">Simple remote layout</string>
    <string name="vps_default">VPS default for new timers</string>
    <string name="vps_default_hint">Used when the receiver has the VPS plugin.</string>
    <string name="screenshot_saved">Screenshot saved to \'%s\'</string>
    <string name="imdb">IMDb</string>
    <string name="missing_stream_player">No Player for Videostreams installed on this device!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mobile_imdb">Use mobile version of imdb.com</string>
    <string name="mobile_imdb_long">Use m.imdb.com instead of www.imdb.com</string>
    <string name="searching">Searching&#8230;</string>
    <string name="searching_known_devices">Searching for dreamboxes in your local network. This may take a few minutes&#8230;</string>
...
    <string name="autotimer_duplicates_any_service">On any channel</string>
    <string name="autotimer_duplicates_any_recording">On any channel or recording</string>
    <string name="autotimer_duplicates_compare">Compare</string>
    <string name="autotimer_compare_title">Title</string>
    <string name="autotimer_compare_short">Title and short description</string>
    <string name="autotimer_compare_all">Title and all descriptions</string>
    <string name="autotimer_record_series">Record series</string>
    <string name="autotimer_suggested_window">Only between %1$s and %2$s</string>
    <string name="autotimer_run">Run now</string>
    <string name="autotimer_run_confirm">Search the EPG for all enabled AutoTimers now? The receiver adds timers for new matches. This can take a few minutes.</string>
    <string name="autotimer_run_started">The receiver is searching now. New timers show up in the timer list once it is done.</string>
    <!-- VPS plugin choice, in VpsMode order: Off, Safe, Overwrite. -->
    <string-array name="vps_modes">
...
